Updated GNU make from version 3.67 to 3.69.

--- a/devel/gmake/ChangeLog
+++ b/devel/gmake/ChangeLog
@@ -1,3 +1,447 @@
+Sun Nov  7 08:07:37 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.69.
+
+Wed Nov  3 06:54:33 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.10.
+
+	* implicit.c (try_implicit_rule): Look for a normal rule before an
+	archive rule.
+
+Fri Oct 29 16:45:28 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* function.c (expand_function: `sort'): Double NWORDS when it
+	overflows, instead of adding five.
+
+	* compatMakefile (clean): Remove loadavg.
+
+Wed Oct 27 17:58:33 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.9.
+
+	* file.h (NEW_MTIME): Define new macro.
+	* main.c (main): Set time of NEW_FILES to NEW_MTIME, not to
+	current time returned from system.  Removed variable NOW.
+	* remake.c (notice_finished_file): Use NEW_MTIME in place of
+	current time here too.
+
+Tue Oct 26 19:45:35 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.8.
+
+	* remake.c (update_file_1): Don't clear MUST_MAKE when FILE has no
+	cmds and !DEPS_CHANGED unless also !NOEXIST.
+
+Mon Oct 25 15:25:21 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* read.c (parse_file_seq): When converting multi-word archive
+	refs, ignore a word beginning with a '('.
+
+Fri Oct 22 02:53:38 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* configure.in: Check for sys/timeb.h.
+	* make.h [HAVE_SYS_TIMEB_H]: Test this before including it.
+
+Thu Oct 21 16:48:17 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.7.
+
+	* rule.c (convert_suffix_rule): New local TARGPERCENT.  Set it to
+	TARGNAME+1 for "(%.o)", to TARGNAME for "%.?".  Use it in place of
+	TARGNAME to initialize PERCENTS[0].
+
+Mon Oct 18 06:49:35 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* configure.in: Use AC_HAVE_HEADERS(unistd.h) instead of AC_UNISTD_H.
+	Remove AC_USG; it is no longer used.
+
+	* file.c (print_file): New function, broken out of
+	print_file_data_base.
+	(print_file_data_base): Call it.
+	* rule.c (print_rule): New function, broken out of
+	print_rule_data_base.
+	(print_rule_data_base): Call it.
+
+Thu Oct 14 14:54:03 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* default.c (install_default_suffix_rules): New function, broken
+	out of install_default_implicit_rules.
+	(install_default_implicit_rules): Move suffix rule code there.
+	* make.h: Declare install_default_suffix_rules.
+	* main.c (main): Call install_default_suffix_rules before reading
+	makefiles.  Move convert_to_pattern call before
+	install_default_implicit_rules.
+
+	* job.h (struct child): Make `pid' member type `pid_t' instead of
+	`int'.
+
+	* compatMakefile (RANLIB): New variable, set by configure.
+	(glob/libglob.a): Pass RANLIB value down to submake.
+
+	Fixes for SCO 3.2 "devsys 4.2" from pss@tfn.com (Peter Salvitti).
+	* make.h: Include <sys/timeb.h> before <time.h> for SCO lossage.
+	* job.c [! getdtablesize] [! HAVE_GETDTABLESIZE]: If NOFILE is not
+	defined but NOFILES_MAX is, define it to be that.
+
+Mon Oct 11 19:47:33 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* GNUmakefile (make-$(version).tar): Depend on acconfig.h, so it
+	is distributed.
+
+Sun Oct  3 15:15:33 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* default.c (default_terminal_rules): Add `-G $@' to SCCS get cmds.
+
+Tue Sep 28 14:18:20 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* job.c (construct_command_argv_internal): Add ^ to SH_CHARS; it
+	is another symbol for | in some shells.
+	* main.c (main): Add it to CMD_DEFS quoting list as well.
+
+Mon Sep 20 18:05:24 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* job.c (construct_command_argv_internal): Remove '=' from
+	SH_CHARS.  Only punt on '=' if it is unquoted in a word before the
+	first word without an unquoted '='.
+
+	* main.c (define_makeflags): Set v_export for MAKEFLAGS.
+
+Fri Sep 17 00:37:18 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* remake.c (update_file_1): Use .DEFAULT cmds for phony targets.
+
+	* make.h [_AIX && _POSIX_SOURCE]: Define POSIX.
+
+	* commands.c (delete_child_targets): Don't delete phony files.
+
+	* job.c (start_job_command): Set COMMANDS_RECURSE in FLAGS if we
+	see a `+' at the beginning of the command line.
+
+Thu Sep  9 17:57:14 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.6.
+
+Wed Sep  8 20:14:21 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* main.c (define_makeflags): Define MAKEFLAGS with o_file, not o_env.
+
+Mon Aug 30 12:31:58 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* expand.c (variable_expand): Fatal on an unterminated reference.
+
+Thu Aug 19 16:27:53 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.5.
+
+	* variable.c (define_automatic_variables): Define new o_default
+	variable `MAKE_VERSION' from version_string and remote_description.
+
+	* make.h (version_string, remote_description): Declare these here.
+	* main.c: Don't declare version_string.
+	(print_version): Don't declare remote_description.
+
+Wed Aug 18 15:01:24 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* read.c (read_makefile): Free space pointed to by CONDITIONALS
+	before restoring the old pointer.
+
+Mon Aug 16 17:33:36 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* compatMakefile ($(objs)): Depend on config.h.
+
+	* GNUmakefile (build.sh.in): Depend on compatMakefile.
+
+	* configure.in: Touch stamp-config after AC_OUTPUT.
+
+Fri Aug 13 16:04:22 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.4.
+
+Thu Aug 12 17:18:57 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* make.h: Include <config.h> instead of "config.h".
+
+Wed Aug 11 02:35:25 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* main.c (main): Make all variables interned from ENVP be v_export.
+	* variable.c (try_variable_definition): In v_default case, don't
+	check for an o_file variable that `getenv' finds.
+
+	* job.c (reap_children): New local variable ANY_LOCAL; set it
+	while setting ANY_REMOTE.  If !ANY_LOCAL, don't wait for local kids.
+
+	* main.c (main): Don't call decode_env_switches on MFLAGS.  DOC THIS.
+
+	* function.c (expand_function): #if 0 out freeing of ENVP since it
+	is environ.
+
+Mon Aug  9 17:37:20 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.3.
+
+	* remote-stub.c (remote_status): Set errno to ECHILD before return.
+	* job.c (reap_children): Scan the chain for remote children and
+	never call remote_status if there are none.
+
+	* function.c (expand_function: `shell'): #if 0 out calling
+	target_environment; just set ENVP to environ instead.
+
+	* job.c (reap_children): Check for negative return from
+	remote_status and fatal for it.
+	When blocking local child wait returns 0, then try a blocking call
+	to remote_status.
+
+Tue Aug  3 00:19:00 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* compatMakefile (clean): Delete make.info* and make.dvi here.
+	(distclean): Not here.
+
+	* dep.h (RM_*): Use #defines instead of enum to avoid lossage from
+	compilers that don't like enum values used as ints.
+
+Mon Aug  2 16:46:34 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* compatMakefile (loadavg): Add $(LOADLIBES).
+
+Sun Aug  1 16:01:15 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.2.
+
+	* compatMakefile (loadavg, check-loadavg): New targets.
+	(check): Depend on check-loadavg.
+
+	* compatMakefile (glob/libglob.a): Depend on config.h.
+
+	* misc.c (log_access): Write to stderr instead of stdout.
+
+Fri Jul 30 00:07:02 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.1.
+
+Thu Jul 29 23:26:40 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* configure.in (SYS_SIGLIST_DECLARED): In test program include
+	<unistd.h> #ifdef HAVE_UNISTD_H.
+
+	* compatMakefile (.PHONY): Put after `all' et al.
+
+	* configure.in: Add AC_IRIX_SUN.
+
+Wed Jul 28 17:41:12 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.68.
+
+Mon Jul 26 14:36:49 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.67.8.
+
+Sun Jul 25 22:09:08 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.67.7.
+
+	* compatMakefile ($(infodir)/make.info): Don't use $(instname).
+	Run install-info script if present.
+
+Fri Jul 23 16:03:50 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* make.h [STAT_MACROS_BROKEN]: Test this instead of [uts].
+
+	* configure.in: Add AC_STAT_MACROS_BROKEN.
+
+Wed Jul 14 18:48:11 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.67.6.
+
+	* read.c (read_makefile): Recognize directive `-include', like
+	`include' but sets RM_DONTCARE flag.
+
+	* variable.c (target_environment): If FILE is nil, use
+	current_variable_set_list in place of FILE->variables.
+	* function.c (expand_function: `shell'): Get an environment for
+	the child from target_environment instead of using environ.
+
+	* dep.h: Declare read_all_makefiles here.
+	(RM_*): Define new enum constants.
+	* read.c (read_makefile): Second arg is FLAGS instead of TYPE.
+	Treat it as a bit mask containing RM_*.
+	(read_all_makefiles): For default makefiles, set D->changed to
+	RM_DONTCARE instead of 1.
+	* main.c: Don't declare read_all_makefiles here.
+	(main): Check `changed' member of read_makefiles elts for RM_*
+	flags instead of specific integer values.
+
+Mon Jul 12 22:42:17 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* make.h [sequent && i386]: #undef POSIX.  From trost@cse.ogi.edu.
+
+Thu Jul  8 19:51:23 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* vpath.c (construct_vpath_list): If ELEM is zero 0, free PATTERN
+	as well as VPATH.
+	(build_vpath_lists): Empty `vpaths' around construct_vpath_list
+	call for $(VPATH).  Expand $(strip $(VPATH)), not just $(VPATH).
+
+	* rule.c (convert_suffix_rule): Use alloca instead of xmalloc for
+	PERCENTS, whose storage is not consumed by create_pattern_rule.
+
+	* make.h [__mips && _SYSTYPE_SVR3]: #undef POSIX.
+
+Wed Jun 30 18:11:40 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.67.5.
+
+	* rule.c (max_pattern_targets): New variable.
+	(count_implicit_rule_limits): Compute its value.
+	* rule.h: Declare it.
+	* implicit.c (pattern_search): Make TRYRULES max_target_patterns
+	times bigger.  Move adding new TRYRULES elt inside the inner
+	targets loop, so each matching target gets its own elt in MATCHES
+	and CHECKED_LASTSLASH.
+
+	* file.c (remove_intermediates): If SIG!=0 say `intermediate file'
+	instead of just `file' in error msg.
+
+Fri Jun 25 14:55:15 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* job.c (construct_command_argv): Turn off
+	--warn-undefined-variables around expansion of SHELL and IFS.
+	* read.c (tilde_expand): Likewise for HOME.
+	(read_all_makefiles): Likewise for MAKEFILES.
+	* vpath.c (build_vpath_lists): Likewise for VPATH.
+
+	* main.c (warn_undefined_variables_flag): New flag variable.
+	(switches): Add --warn-undefined-variables.
+	* make.h (warn_undefined_variables_flag): Declare it.
+	* expand.c (warn_undefined): New function.
+	(reference_variable): Call it if the variable is undefined.
+	(variable_expand): In substitution ref, call warn_undefined if the
+	variable is undefined.
+
+	* default.c (default_pattern_rules): Add `%.c: %.w %.ch' and
+	`%.tex: %.w %.ch' rules.
+	(default_suffix_rules: .w.c, .w.tex): Pass three args: $< - $@.
+	(default_suffixes): Add `.ch'.
+
+Mon Jun 21 17:55:39 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* default.c (default_suffixes): Replace `.cweb' with `.w'.
+	(default_suffix_rules): Rename `.cweb.c' and `.cweb.tex' to `.w.c'
+	and `.w.tex'.
+
+Fri Jun 11 14:42:09 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* compatMakefile ($(bindir)/$(instname)): Add missing backslash.
+
+Thu Jun 10 18:14:08 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.67.4.
+
+	* read.c (multi_glob): Don't free OLD and OLD->name in the
+	FOUND!=0 fork.  Use new block-local variable F instead of
+	clobbering OLD.
+
+	* ar.c (glob_pattern_p): New function, snarfed from glob/glob.c.
+	(ar_glob): Call it; return nil immediately if MEMBER_PATTERN
+	contains no metacharacters.
+
+Wed Jun  9 16:25:35 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* ar.c (ar_glob{_match,_alphacompare}): New function.
+
+	* dep.h [! NO_ARCHIVES]: Declare it.
+	* read.c (multi_glob) [! NO_ARCHIVES]: Use it on archive member elts.
+
+	* read.c (read_makefile): Pass flag (1) to parse_file_seq, not to
+	multi_glob (which doesn't take a 3rd arg).
+	* rule.c (install_pattern_rule): Likewise.
+	* default.c (set_default_suffixes): Here too.
+	* function.c (string_glob): Don't pass gratuitous arg to multi_glob.
+
+	* read.c (parse_file_seq) [! NO_ARCHIVES]: Add post-processing
+	loop to translate archive refs "lib(a b)" into "lib(a) lib(b)".
+
+Mon Jun  7 19:26:51 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* compatMakefile (installdirs): Actually pass directory names.
+	($(bindir)/$(instname)): Test chgrp&&chmod exit status with `if';
+	if it fails, echo a warning msg, but don't make the rule fail.
+
+	* read.c (tilde_expand): New function, broken out of tilde_expand.
+	(multi_glob): Call it.
+	(construct_include_path): Expand ~ in directory names.
+	* dep.h: Declare tilde_expand.
+	* main.c (enter_command_line_file): Expand ~ at the start of NAME.
+	(main): Expand ~ in -C args.
+	* read.c (read_makefile): Expand ~ in FILENAME unless TYPE==2.
+
+Fri Jun  4 13:34:47 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* main.c (decode_env_switches): Use xmalloc instead of alloca for ARGS.
+
+	* main.c (main): Put result of alloca in temporary variable with
+	simple assignment, to make SGI compiler happy.
+
+Thu Jun  3 20:15:46 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.67.3.
+
+	* main.c (main): Before re-execing, remove intermediate files, and
+	print the data base under -p.  Sexier debugging message.
+
+	* implicit.c (pattern_search): Allocate an extra copy of the name
+	of a winning intermediate file when putting it in FOUND_FILES.
+
+Wed Jun  2 16:38:08 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* read.c (read_makefile): Pass flag (1) to parse_file_seq, not to
+	multi_glob (which doesn't take a 3rd arg).
+
+	* dir.c (dir_contents_file_exists_p): When reading dirents, ignore
+	chars within D_NAMLEN that are NULs.
+
+	* main.c (decode_switches): Don't savestring ARGV[0] to put it
+	into `other_args'.
+	For string switch, don't savestring `optarg'.
+	(main): Don't free elts of makefiles->list that are "-".
+	Use alloca'd rather than savestring'd storage for elts of
+	makefiles->list that are temporary file names.
+	* read.c (read_all_makefiles): Don't free *MAKEFILES.
+	* file.c (enter_file): Don't strip `./'s.
+	* main.c (enter_command_line_file): New function.
+	(main): Use it in place of enter_file for command-line goals from
+	other_files, and for old_files and new_files.
+
+Mon May 31 18:41:40 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.67.2.
+
+	* compatMakefile (.SUFFIXES): Add .info.
+	($(infodir)/$(instname).info): Find make.info* in cwd if there,
+	else in $srcdir.  Use basename to remove dir name from installed name.
+
+Thu May 27 17:35:02 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* implicit.c (pattern_search): When interning FOUND_FILES, try
+	lookup_file first; if found, free the storage for our copy of the name.
+
+Wed May 26 14:31:20 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* Version 3.67.1.
+
+	* main.c (decode_switches): In usage msg, write `--switch=ARG' or
+	`--switch[=OPTARG]' rather than `--switch ARG' or `--switch [ARG]'.
+
+Mon May 24 16:17:31 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
+
+	* rule.c (convert_suffix_rule): New function.
+	(convert_to_pattern): Use it instead of doing all the work here
+	several times.
+	For target suffix `.a', generate both the archive magic rule and
+	the normal rule.
+
+	* compatMakefile (distclean): Remove stamp-config.
+
 Sat May 22 16:15:18 1993  Roland McGrath  (roland@churchy.gnu.ai.mit.edu)
 
 	* Version 3.67.
@@ -6914,7 +7358,3 @@ Fri Jul 15 21:01:44 1988  Roland McGrath  (mcgrath at tully.Berkeley.EDU)
 	* Took Make out of RCS.
 
 	* Split the monolithic `make.c' into several smaller files.
-
-Local Variables:
-eval: (if (fboundp 'change-log-mode) (change-log-mode) (indented-text-mode) (setq left-margin 8))
-End:
