--- a/devel/gmake/README
+++ b/devel/gmake/README
@@ -1,4 +1,4 @@
-This directory contains the 3.67 test release of GNU Make.
+This directory contains the 3.69 test release of GNU Make.
 All bugs reported for previous test releases have been fixed.
 Some bugs surely remain.
 
@@ -13,6 +13,12 @@ use for `make install', or whatever else.
 It has been reported that the XLC 1.2 compiler on AIX 3.2 is buggy such
 that if you compile make with `cc -O' on AIX 3.2, it will not work correctly.
 It is said that using `cc' without `-O' does work.
+
+One area that is often a problem in configuration and porting is the code
+to check the system's current load average.  To make it easier to test and
+debug this code, you can do `make check-loadavg' to see if it works
+properly on your system.  (You must run `configure' beforehand, but you
+need not build Make itself to run this test.)
 
 See the file NEWS for what has changed since previous releases.
 
