--- a/devel/gmake/texinfo.tex
+++ b/devel/gmake/texinfo.tex
@@ -22,7 +22,7 @@
 %You are forbidden to forbid anyone else to use, share and improve
 %what you give them.   Help stamp out software-hoarding!
 
-\def\texinfoversion{2.108}
+\def\texinfoversion{2.115}
 \message{Loading texinfo package [Version \texinfoversion]:}
 
 % Print the version number if in a .fmt file.
@@ -679,6 +679,11 @@ where each line of input produces a line of output.}
     \let\tenrm = \nullfont  \let\tenit = \nullfont  \let\tensl = \nullfont
     \let\tenbf = \nullfont  \let\tentt = \nullfont  \let\smallcaps = \nullfont
     \let\tensf = \nullfont
+    % Similarly for index fonts (mostly for their use in
+    % smallexample)
+    \let\indrm = \nullfont  \let\indit = \nullfont  \let\indsl = \nullfont
+    \let\indbf = \nullfont  \let\indtt = \nullfont  \let\indsc = \nullfont
+    \let\indsf = \nullfont
     %
     % Don't complain when characters are missing from the fonts.
     \tracinglostchars = 0
@@ -1074,10 +1079,17 @@ where each line of input produces a line of output.}
 % and arrange explicitly to hyphenate an a dash.
 %  -- rms.
 {
-\catcode `\-=\active
-\catcode `\_=\active
-\global\def\code{\begingroup \catcode `\-=\active \let-\codedash \let_\codeunder \codex}
+\catcode`\-=\active
+\catcode`\_=\active
+\global\def\code{\begingroup \catcode`\-=\active \let-\codedash \catcode`\_=\active \let_\codeunder \codex}
+% The following is used by \doprintindex to insure that long function names
+% wrap around.  It is necessary for - and _ to be active before the index is
+% read from the file, as \entry parses the arguments long before \code is
+% ever called.  -- mycroft
+\global\def\indexbreaks{\catcode`\-=\active \let-\realdash \catcode`\_=\active \let_\realunder}
 }
+\def\realdash{-}
+\def\realunder{_}
 \def\codedash{-\discretionary{}{}{}}
 \def\codeunder{\normalunderscore\discretionary{}{}{}}
 \def\codex #1{\tclose{#1}\endgroup}
@@ -1140,7 +1152,7 @@ where each line of input produces a line of output.}
    \def\titlezzz##1{\leftline{\titlefont{##1}}
 		    % print a rule at the page bottom also.
 		    \finishedtitlepagefalse
-		    \vskip4pt \hrule height 4pt \vskip4pt}%
+		    \vskip4pt \hrule height 4pt width \hsize \vskip4pt}%
    % No rule at page bottom unless we print one at the top with @title.
    \finishedtitlepagetrue
    %
@@ -1180,7 +1192,7 @@ where each line of input produces a line of output.}
 }
 
 \def\finishtitlepage{%
-   \vskip4pt \hrule height 2pt
+   \vskip4pt \hrule height 2pt width \hsize
    \vskip\titlepagebottomglue
    \finishedtitlepagetrue
 }
@@ -1354,14 +1366,18 @@ July\or August\or September\or October\or November\or December\fi
 % They also define \itemindex
 % to index the item name in whatever manner is desired (perhaps none).
 
+\newif\ifitemxneedsnegativevskip
+
+\def\itemxpar{\par\ifitemxneedsnegativevskip\vskip-\parskip\nobreak\fi}
+
 \def\internalBitem{\smallbreak \parsearg\itemzzz}
-\def\internalBitemx{\par \parsearg\itemzzz}
+\def\internalBitemx{\itemxpar \parsearg\itemzzz}
 
 \def\internalBxitem "#1"{\def\xitemsubtopix{#1} \smallbreak \parsearg\xitemzzz}
-\def\internalBxitemx "#1"{\def\xitemsubtopix{#1} \par \parsearg\xitemzzz}
+\def\internalBxitemx "#1"{\def\xitemsubtopix{#1} \itemxpar \parsearg\xitemzzz}
 
 \def\internalBkitem{\smallbreak \parsearg\kitemzzz}
-\def\internalBkitemx{\par \parsearg\kitemzzz}
+\def\internalBkitemx{\itemxpar \parsearg\kitemzzz}
 
 \def\kitemzzz #1{\dosubind {kw}{\code{#1}}{for {\bf \lastfunction}}%
                  \itemzzz {#1}}
@@ -1377,9 +1393,9 @@ July\or August\or September\or October\or November\or December\fi
   \nobreak % This prevents a break before @itemx.
   %
   % Be sure we are not still in the middle of a paragraph.
-  {\parskip = 0in
-  \par
-  }%
+  %{\parskip = 0in
+  %\par
+  %}%
   %
   % If the item text does not fit in the space we have, put it on a line
   % by itself, and do not allow a page break either before or after that
@@ -1387,7 +1403,15 @@ July\or August\or September\or October\or November\or December\fi
   % command is, e.g., @kindex, the whatsit would get put into the
   % horizontal list on a line by itself, resulting in extra blank space.
   \ifdim \wd0>\itemmax
-    \setbox0=\hbox{\hskip \leftskip \hskip -\tableindent \unhbox0}\box0
+    %
+    % Make this a paragraph so we get the \parskip glue and wrapping,
+    % but leave it ragged-right.
+    \begingroup
+      \advance\leftskip by-\tableindent
+      \advance\hsize by\tableindent
+      \advance\rightskip by0pt plus1fil
+      \leavevmode\unhbox0\par
+    \endgroup
     %
     % We're going to be starting a paragraph, but we don't want the
     % \parskip glue -- logically it's part of the @item we just started.
@@ -1397,15 +1421,18 @@ July\or August\or September\or October\or November\or December\fi
     % we can't prevent a possible page break at the following
     % \baselineskip glue.
     \nobreak
+    \endgroup
+    \itemxneedsnegativevskipfalse
   \else
     % The item text fits into the space.  Start a paragraph, so that the
     % following text (if any) will end up on the same line.  Since that
     % text will be indented by \tableindent, we make the item text be in
     % a zero-width box.
     \noindent
-    \rlap{\hskip -\tableindent\box0}%
+    \rlap{\hskip -\tableindent\box0}\ignorespaces%
+    \endgroup%
+    \itemxneedsnegativevskiptrue%
   \fi
-  \endgroup
 }
 
 \def\item{\errmessage{@item while not in a table}}
@@ -1838,8 +1865,9 @@ July\or August\or September\or October\or November\or December\fi
   \tex
   \dobreak \chapheadingskip {10000}
   \catcode`\%=\other\catcode`\&=\other\catcode`\#=\other
-  \catcode`\$=\other\catcode`\_=\other
+  \catcode`\$=\other
   \catcode`\~=\other
+  \indexbreaks
   %
   % The following don't help, since the chars were translated
   % when the raw index was written, and their fonts were discarded
@@ -1932,17 +1960,26 @@ July\or August\or September\or October\or November\or December\fi
   %
   % Insert the text of the index entry.  TeX will do line-breaking on it.
   #1%
-  %
-  % If we must, put the page number on a line of its own, and fill out
-  % this line with blank space.  (The \hfil is overwhelmed with the
-  % fill leaders glue in \indexdotfill if the page number does fit.)
-  \hfil\penalty50
-  \null\nobreak\indexdotfill % Have leaders before the page number.
-  %
-  % The `\ ' here is removed by the implicit \unskip that TeX does as
-  % part of (the primitive) \par.  Without it, a spurious underfull
-  % \hbox ensues.
-  \ #2% The page number ends the paragraph.
+  % The following is kluged to not output a line of dots in the index if
+  % there are no page numbers.  The next person who breaks this will be
+  % cursed by a Unix daemon.
+  \def\tempa{{\rm }}%
+  \def\tempb{#2}%
+  \edef\tempc{\tempa}%
+  \edef\tempd{\tempb}%
+  \ifx\tempc\tempd\ \else%
+    %
+    % If we must, put the page number on a line of its own, and fill out
+    % this line with blank space.  (The \hfil is overwhelmed with the
+    % fill leaders glue in \indexdotfill if the page number does fit.)
+    \hfil\penalty50
+    \null\nobreak\indexdotfill % Have leaders before the page number.
+    %
+    % The `\ ' here is removed by the implicit \unskip that TeX does as
+    % part of (the primitive) \par.  Without it, a spurious underfull
+    % \hbox ensues.
+    \ #2% The page number ends the paragraph.
+  \fi%
   \par
 \endgroup}
 
@@ -2809,7 +2846,7 @@ July\or August\or September\or October\or November\or December\fi
 
 % Define \obeyedspace to be our active space, whatever it is.  This is
 % for use in \parsearg.
-{\sepspaces %
+{\sepspaces%
 \global\let\obeyedspace= }
 
 % This space is always present above and below environments.
@@ -3104,7 +3141,7 @@ July\or August\or September\or October\or November\or December\fi
 \advance\leftskip by \defbodyindent \advance \rightskip by \defbodyindent
 \exdentamount=\defbodyindent
 \begingroup %
-\catcode 61=\active %
+\catcode 61=\active % 61 is `='
 \obeylines\activeparens\spacesplit#3}
 
 \def\defmethparsebody #1#2#3#4 {\begingroup\inENV %
@@ -3147,55 +3184,54 @@ July\or August\or September\or October\or November\or December\fi
 \catcode 61=\active %
 \obeylines\spacesplit#3}
 
-\def\defvrparsebody #1#2#3#4 {\begingroup\inENV %
-\medbreak %
-% Define the end token that this defining construct specifies
-% so that it will exit this group.
-\def#1{\endgraf\endgroup\medbreak}%
-\def#2##1 {\begingroup\obeylines\spacesplit{#3{##1}}}%
-\parindent=0in
-\advance\leftskip by \defbodyindent \advance \rightskip by \defbodyindent
-\exdentamount=\defbodyindent
-\begingroup\obeylines\spacesplit{#3{#4}}}
+% This is used for \def{tp,vr}parsebody.  It could probably be used for
+% some of the others, too, with some judicious conditionals.
+% 
+\def\parsebodycommon#1#2#3{%
+  \begingroup\inENV %
+  \medbreak %
+  % Define the end token that this defining construct specifies
+  % so that it will exit this group.
+  \def#1{\endgraf\endgroup\medbreak}%
+  \def#2##1 {\begingroup\obeylines\spacesplit{#3{##1}}}%
+  \parindent=0in
+  \advance\leftskip by \defbodyindent \advance \rightskip by \defbodyindent
+  \exdentamount=\defbodyindent
+  \begingroup\obeylines
+}
 
-% This seems to work right in all cases.
-\let\deftpparsebody=\defvrparsebody
-% This fails to work.  When given `@deftp {Data Type} foo_t',
-% it thinks the type name is just `f'.
-%%% This is the same as all the others except for the last line.  We need
-%%% to parse the arguments differently for @deftp, since the ``attributes''
-%%% there are optional.
-%%%
-%%\def\deftpparsebody #1#2#3#4 {\begingroup\inENV %
-%%\medbreak %
-%%% Define the end token that this defining construct specifies
-%%% so that it will exit this group.
-%%\def#1{\endgraf\endgroup\medbreak}%
-%%\def#2##1 {\begingroup\obeylines\spacesplit{#3{##1}}}%
-%%\parindent=0in
-%%\advance\leftskip by \defbodyindent \advance \rightskip by \defbodyindent
-%%\exdentamount=\defbodyindent
-%%\begingroup\obeylines\parsetpheaderline{#3{#4}}}
+\def\defvrparsebody#1#2#3#4 {%
+  \parsebodycommon{#1}{#2}{#3}%
+  \spacesplit{#3{#4}}%
+}
 
-%%{\obeylines %
-%%  % Parse the type name and any attributes (field names, etc.).
-%%  % #1 is the beginning of the macro call that will produce the output,
-%%  %   i.e., \deftpheader{CLASS}; this is passed from \deftpparsebody.
-%%  % #2 is the type name, e.g., `struct termios'.
-%%  % #3 is the (possibly empty) attribute list.
-%%  %
-%%  \gdef\parsetpheaderline#1#2#3^^M{%
-%%    \endgroup % Started in \deftpparsebody.
-%%    %
-%%    % If the attribute list is in fact empty, there will be no space after
-%%    % #2; so we can't put a space in our TeX parameter list.  But if it
-%%    % isn't empty, then #3 will begin with an unwanted space.
-%%    \def\theargs{\ignorespaces #3}%
-%%    %
-%%    % Call the macro to produce the output.
-%%    #1{#2}\theargs %
-%%  }%
-%%}
+% This loses on `@deftp {Data Type} {struct termios}' -- it thinks the
+% type is just `struct', because we lose the braces in `{struct
+% termios}' when \spacesplit reads its undelimited argument.  Sigh.
+% \let\deftpparsebody=\defvrparsebody
+%
+% So, to get around this, we put \empty in with the type name.  That
+% way, TeX won't find exactly `{...}' as an undelimited argument, and
+% won't strip off the braces.
+%
+\def\deftpparsebody #1#2#3#4 {%
+  \parsebodycommon{#1}{#2}{#3}%
+  \spacesplit{\parsetpheaderline{#3{#4}}}\empty
+}
+
+% Fine, but then we have to eventually remove the \empty *and* the
+% braces (if any).  That's what this does, putting the result in \tptemp.
+% 
+\def\removeemptybraces\empty#1\relax{\def\tptemp{#1}}%
+
+% After \spacesplit has done its work, this is called -- #1 is the final
+% thing to call, #2 the type name (which starts with \empty), and #3
+% (which might be empty) the arguments.
+% 
+\def\parsetpheaderline#1#2#3{%
+  \removeemptybraces#2\relax
+  #1{\tptemp}{#3}%
+}%
 
 \def\defopvarparsebody #1#2#3#4#5 {\begingroup\inENV %
 \medbreak %
@@ -3295,7 +3331,10 @@ July\or August\or September\or October\or November\or December\fi
 % #1 is the classification, #2 the data type, #3 the name, #4 the args.
 \def\deftypefnheaderx #1#2#3 #4\relax{%
 \doind {fn}{\code{#3}}% Make entry in function index
-\begingroup\defname {\code{#2} #3}{#1}%
+\begingroup
+\normalparens % notably, turn off `&' magic, which prevents
+%               at least some C++ text from working
+\defname {\code{#2} #3}{#1}%
 \deftypefunargs {#4}\endgroup %
 \catcode 61=\other % Turn off change made in \defparsebody
 }
@@ -3474,17 +3513,17 @@ July\or August\or September\or October\or November\or December\fi
 % \setref{foo} defines a cross-reference point named foo.
 
 \def\setref#1{%
-%\dosetq{#1-title}{Ytitle}%
+\dosetq{#1-title}{Ytitle}%
 \dosetq{#1-pg}{Ypagenumber}%
 \dosetq{#1-snt}{Ysectionnumberandtype}}
 
 \def\unnumbsetref#1{%
-%\dosetq{#1-title}{Ytitle}%
+\dosetq{#1-title}{Ytitle}%
 \dosetq{#1-pg}{Ypagenumber}%
 \dosetq{#1-snt}{Ynothing}}
 
 \def\appendixsetref#1{%
-%\dosetq{#1-title}{Ytitle}%
+\dosetq{#1-title}{Ytitle}%
 \dosetq{#1-pg}{Ypagenumber}%
 \dosetq{#1-snt}{Yappendixletterandtype}}
 
@@ -3504,11 +3543,22 @@ July\or August\or September\or October\or November\or December\fi
 \setbox1=\hbox{\printedmanual}%
 \setbox0=\hbox{\printednodename}%
 \ifdim \wd0=0pt%
+% No printed node name was explicitly given.
+\ifx SETxref-automatic-section-title %
+% This line should make the actual chapter or section title appear inside
+% the square brackets.  Use the real section title if we have it.
+\ifdim \wd1>0pt%
+% It is in another manual, so we don't have it.
+\def\printednodename{\ignorespaces #1} \else%
+% We know the real title if we have the xref values.
+\ifhavexrefs \def\printednodename{\refx{#1-title}}%
+% Otherwise just copy the Info node name.
+\else \def\printednodename{\ignorespaces #1} \fi%
+\fi\def\printednodename{#1-title}%
+\else% This line just uses the node name.
 \def\printednodename{\ignorespaces #1}%
-%%% Uncommment the following line to make the actual chapter or section title
-%%% appear inside the square brackets.
-%\def\printednodename{#1-title}%
-\fi%
+\fi% ends \ifx SETxref-automatic-section-title
+\fi% ends \ifdim \wd0
 %
 %
 % If we use \unhbox0 and \unhbox1 to print the node names, TeX does
@@ -3544,7 +3594,7 @@ section ``\printednodename'' in \cite{\printedmanual}%
 
 \def\Ypagenumber{\folio}
 
-\def\Ytitle{\thischapter}
+\def\Ytitle{\thissection}
 
 \def\Ynothing{}
 
