Upgrade tcl-dp to version 3.0

--- a/net/tcl-dp/examples/README
+++ b/net/tcl-dp/examples/README
@@ -2,12 +2,12 @@
 This directory contains example Tcl/Tk applications that use Tcl-DP.  
 The examples supplied (in order from simple to complex) are:
 
+    telnet.tk	- A very simple telnet-like interface in Tcl-DP.  Run with:
+		  "dpwish -notk -f telnet.tk localhost 25"
     id		- integer identifier server
     conference	- multiperson conference server
     tictactoe	- multiplayer game, uses Tk
-    services	- name server
 
-The first three applications use Tcl/Tk scripting only and
-require that you to run dpwish (or any Tcl-DP extended wish).
-The services example includes C code for its own wish-like program.
-
+The first two applications use terminal I/O -- you can run them
+with "dpwish -notk".  The third uses graphics, so you'll need to
+use dpwish.
