--- a/net/tcl-dp/README
+++ b/net/tcl-dp/README
@@ -1,102 +1,77 @@
 
-              Tcl Distributed Programming (Tcl-DP)
-                 (Version 1.0a; March 11, 1993)
+             Tcl Distributed Programming (Tcl-DP)
+               (Version 3.0; December 11, 1993)
 
-          Lawrence A. Rowe, Brian Smith, and Steve Yen
-                Computer Science Division-EECS
-              University of California at Berkeley
+             Lawrence A. Rowe and Brian C. Smith
+               Computer Science Division-EECS
+             University of California at Berkeley
 
 This directory contains a freely distributable extension to Tcl/Tk
-called Tcl Distributed Programming (Tcl-DP).  Tcl-DP adds TCP and
-IP connection management, remote procedure call (RPC), and
-distributed object protocols to Tcl/Tk.
+called Tcl Distributed Programming (Tcl-DP).  Tcl-DP adds TCP and IP
+connection management, remote procedure call (RPC), and distributed
+object protocols to Tcl/Tk.  A C interface to the RPC primitives is
+also provided.  Unlike the "send" command of Tk, Tcl-DP does not
+require that Tcl/Tk processes that want to communicate share an X
+server because Tcl-DP is built directly upon TCP/IP.
 
 BACKGROUND
 
-A C interface to the RPC primitives is also provided.  Unlike the 
-"send" command of Tk, Tcl-DP does not require that Tcl/Tk processes 
-that want to communicate must share an X server because Tcl-DP is 
-built upon TCP/IP.
-
 Tcl stands for the Tool Command Language, a freely distributable,
-embeddable scripting language package.  Tk is an freely
-distributable X windows interface toolkit and widget library
-implemented by a collection of new commands added to Tcl.
-Information about Tcl/Tk is available by anonymous ftp from
-sprite.berkeley.edu [128.32.150.27].  Tcl-DP was developed for
-Tcl 6.5 and Tk 3.0.
+embeddable scripting language package.  Tk is an freely distributable X
+windows interface toolkit and widget library implemented by a
+collection of new commands added to Tcl.  Information about Tcl/Tk is
+available by anonymous ftp from sprite.berkeley.edu [128.32.150.27].
+Tcl-DP was originally developed for Tcl 6.5 and Tk 3.0.  Tcl-DP Version
+3.0 is compatible with Tcl 7.3 and Tk 3.6.
 
-This distribution contains the source code for Tcl-DP, man pages
-that describe the commands, and several examples that illustrate
-how to use Tcl-DP to build simple distributed applications.
-Tcl-DP is available by anonymous ftp from toe.berkeley.edu
-[128.32.149.117].
+This distribution contains the source code for Tcl-DP, man pages that
+describe the commands, and several examples that illustrate how to use
+Tcl-DP to build simple distributed applications.  Tcl-DP is available
+by anonymous ftp from toe.berkeley.edu [128.32.149.117] in the
+/pub/multimedia/Tcp-DP directory.
 
-The Makefile creates two libraries, named libtnetwork.a and libtutil.a,
-that can be linked with your application programs.  The library
-libtnetwork.a contains the Tcl-DP extension, and the library
-libtutil.a contains basic utilities upon which Tcl-DP depends.
-To use Tcl-DP, you must initialize your Tcl interpreters with the
-dpInit C procedure (see network.h, and the example in main.c).
-After initialization, all distributed programming can be done 
-with Tcl commands.
-
-Tcl/Tk supports on-demand autoloading of Tcl/Tk procedures.  Tcl-DP 
-adds several autoloading Tcl/Tk procedures.  They are located in the 
-library subdirectory.  These Tcl/Tk scripts must be copied to the 
-directory that contains your existing autoloading Tcl/Tk scripts, 
-and they must be listed in the tclIndex file in that directory.
+The Makefile creates a library, libdpnetwork.a, that can be linked with
+your application programs.  To use Tcl-DP, you must initialize your Tcl
+interpreters with the Tdp_Init C procedure (see dp.h and tkAppInit.c).
+After initialization, all distributed programming can be done with Tcl
+commands.
 
 In the examples subdirectory, several sample applications are supplied
-that use Tcl-DP.  As you can see from the examples, the distributed 
-programming mechanisms of Tcl-DP are very simple.  An RPC command, 
-for example, sends a Tcl command to a remote process, which evaluates 
-the command in the destination Tcl interpreter and returns the result 
-as the value of the RPC command.
+that use Tcl-DP.  As you can see from the examples, the distributed
+programming mechanisms of Tcl-DP are very simple.  A dp_RPC command,
+for example, sends a Tcl command to a remote process, which evaluates
+the command in the destination Tcl interpreter and returns the result
+as the value of the dp_RPC command.
 
-A dpwish program (i.e., a wish with Tcl-DP extensions) is also supplied.  
-To exit dpwish, you should use the "exit" command, not the break or 
-interrupt keys (i.e., Ctrl-C, Ctrl-D) as this allows Tcl-DP to clean 
-up dangling network connections.  A solution to the graceful shutdown 
-problem that we use in our Tcl-DP applications is to catch the 
-break/kill/interrupt UNIX signals and eval the "exit" command before 
-halting the application.
+The services subdirectory contains an extended example of Tcl-DP.  It
+contains Tcl-DP scripts to implement a name server, a daemon to which
+server applications can advertise their location, and from which client
+applications can locate the servers.  See services/README.
 
 COMPILING/USING TCL-DP
 
 To compile the dpwish program:
 
-+) If you do not already have Tcl 6.5 and Tk 3.0, get a copy and follow 
-the instructions to build the system.  Tcl-DP does not work with earlier 
-versions of Tcl/Tk.  
++) If you do not already have Tcl 7.3 and Tk 3.6, get a copy and follow
+the instructions to build the system.  Tcl-DP 3.0 may not work with
+earlier versions of Tcl/Tk.  Although not required, we recommend that
+you place tcl-dp3.0 in a sibling directory to tcl7.3 and tk3.6, and
+then make a symlink from tcl-dp3.0 to tcl-dp.
 
-+) In the Tcl-DP directory (i.e., where this README resides), follow
-the configuration instructions at the start of the Makefile.  For
-example, you will need to edit the Makefile variables TCL_INC,
-TCL_LIB, ....
++) In the tcl-dp directory (i.e., where this README resides), type
+"./configure".  This runs a configuration script created by GNU
+autoconf, which configures Tcl for your system and creates a Makefile.
+The configure script allows you to customize the Tk configuration for
+your site; for details on how you can do this, see the file
+"configure.info".
 
-+) To make the dpwish program, type...
++) Type "make".  This will create a library archive called
+"libdpnetwork.a" and a Tcl-DP extended wish called "dpwish."
 
-    make dpwish
-
-This will make the libraries libtnetwork.a and libtutil.a and the 
-dpwish program.  If you only need the libtnetwork.a and the
-libtutil.a libraries, you can type...
-
-    make libtnetwork.a
-    make libtutil.a
-
-To install the autoloading Tcl/Tk scripts of Tcl-DP:
-
-+) Copy all Tcl/Tk scripts from the Tcl-DP/library directory to the
-directory where Tcl/Tk stores your existing autoloading Tcl/Tk
-scripts.  The environment variable TCL_LIBRARY (and the Tcl 6.5
-Makefile) should specify where this directory is located.
-
-+) Update the tclIndex file in that TCL_LIBRARY directory to
-reflect the Tcl/Tk scripts that you copied in the last step.  You
-can do this manually, or you can have Tcl/Tk automatically update
-the tclIndex file with its "auto_mkindex" command.
++) Type "make install" to install Tcl-DP's binaries, library files,
+and manual pages in standard places.  In the default configuration
+information will be installed in /usr/local so you'll need write
+permission on this directory.
 
 To learn how to use Tcl-DP:
 
@@ -104,7 +79,7 @@ To learn how to use Tcl-DP:
 the example applications.
 
 +) Read the Tcl-DP man page (Tcl-DP.l), and the other man pages 
-in the man subdirectories.
+in the doc subdirectory.
 
 To report bugs, bug fixes, descriptions of interesting Tcl-DP 
 applications, and suggested improvements:
@@ -117,9 +92,12 @@ or
 +) Post an article in the comp.lang.tcl newsgroup.
 
 We extend our thanks to everyone who helped to create, debug, and
-distribute this software, including the following people:
+distribute this software.  Although there are too many people to mention
+at this point, the following people deserve special attention:
 
   John Ousterhout, creator of Tcl/Tk; 
   Pekka Nikander, creator of tcpConnect;
   Tim MacKenzie, creator of tclRawTCP;
-
+  Lou Salkind, ported Tcl-DP to Tcl 7.0/Tk 3.3
+  R Lindsay Todd, developed security mechanism
+  Craig Federighi, developed extended name server code
