--- a/net/tcl-dp/examples/id/README
+++ b/net/tcl-dp/examples/id/README
@@ -13,19 +13,19 @@ Please read them and edit them as they suggest.
 
 To run the idServer...
 
-Run dpwish.
+Run "dpwish -notk".
 Type "source idServer.tcl".
 
 --------------------------------------------------------------------
 
 To run the idClient...
 
-Run dpwish, as another process.
+Run "dpwish -notk", as another process.
 Type "source idClient.tcl".
 
 --------------------------------------------------------------------
 
-From the idClient dpwish, type your own RPC commands to experiement
+From the idClient dpwish, type your own RPC commands to experiment
 with the system.  Remember, the arguments you give to the RPC command
 are evaluated in the idServer's interpreter, and the result of
 that remote evaluation is returned.  For example, in the idClient
